--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "axios": "^0.18.0",
     "core-js": "^2.6.5",
+    "mobx": "^5.9.4",
+    "mobx-vue": "^2.0.9",
+    "tailwind": "^4.0.0",
     "vue": "^2.6.10",
+    "vue-enchanced-router": "^1.2.1",
     "vue-router": "^3.0.3"
   },
   "devDependencies": {
@@ -21,6 +29,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
+    "tailwindcss": "^1.0.1",
     "vue-template-compiler": "^2.6.10"
   }
 }
