--- a/package.json
+++ b/package.json
@@ -11,7 +11,16 @@
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/plugin-proposal-decorators": "^7.4.4",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/runtime": "^7.4.5",
+    "autoprefixer": "^7.1.2",
     "axios": "^0.18.0",
+    "babel-core": "^6.22.1",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-plugin-transform-vue-jsx": "^3.5.0",
+    "babel-preset-env": "^1.3.2",
+    "babel-preset-stage-2": "^6.22.0",
     "core-js": "^2.6.5",
     "mobx": "^5.9.4",
     "mobx-vue": "^2.0.9",
@@ -21,6 +30,7 @@
     "vue-router": "^3.0.3"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.4.4",
     "@vue/cli-plugin-babel": "^3.8.0",
     "@vue/cli-plugin-eslint": "^3.8.0",
     "@vue/cli-service": "^3.8.0",
